# BrickGames

./: README.md  README_RUS.md
src/: Makefile  config_file
src/Common/: Common.h
src/Gui/: GraphicModel.cpp  GraphicModel.h
src/Tests/: CMakeLists.txt  snake_tests.h  tests.cpp  tetris_tests.h
src/brick_game/snake/: CMakeLists.txt  SnakeModel.cpp  SnakeModel.h  mainwindow.cpp  mainwindow.h
src/brick_game/tetris/: CMakeLists.txt  TetrisModel.cpp  TetrisModel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
